chapter13/04-security/initial-setup/ism-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ism-app-v2
spec:
  selector:
    matchLabels:
      app: ism-app
      version: v2
  replicas: 3
  template:
    metadata:
      labels:
        app: ism-app
        version: v2
    spec:
      containers:
      - name: ism-app-v2
        image: soumiyajit/ism-app-v2
        ports:
        - containerPort: 8080
